--- a/src/App.css
+++ b/src/App.css
@@ -1,89 +1,260 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
+    font-size: 14px;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
-.App{
+
+.App {
     max-width: 1200px;
     height: auto;
     margin: 5px auto;
 }
-.header{
-    width: 100%;
-    height: 960px;  
-    margin: 0px 5px;
-}
-.header-menu{
-    width: 100%;
-    height: 50%;
+.login-registerForm{
+    width: 200px;
     display: flex;
-    justify-content: space-around;
-}
-.header-menu_logo{
-width: 120px;
-}
-.header-menu_toolbar{
-    width: 800px;
-    margin: 0px auto;
-}
-
-.header-menu_logoImg{
-    width: 100%;
-}
-
-.header-menu_toolbar ul{
-    display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    gap: 10px;
 }
+/*header/////////////////*/
+.header {
+    width: 100%;
+    height: 120px;
+    margin: 5px 0px;
+    border: 1px solid red;
+}
+
+.header-menu {
+    width: auto;
+    height: 50%;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.header-menu_logo {
+    width: 100px;
+    height:100%
+}
+.header-menu_logoImg {
+    width: 100%;
+}
+
+.header-menu_toolbar {
+    width: 70%;
+    height: 100%;
+    margin-left: 20px;
+    display: flex;  
+    align-items: center;
+    text-align: center;  
+}
+
+
+.header-menu_toolbar ul {
+    width: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    gap: 5px;
+}
+
 .header-menu_toolbar ul li {
     width: 100px;
 }
 
-.header-menu_tool{
-    display: flex;
-    justify-content: space-between;
+.header-menu_tool {
+    max-width: 30%;
+    height: 100%;
 }
-.header-opttion{
+
+.header-opttion {
     width: 100%;
     height: 50%;
+}
+
+.header-opttion ul {
+    max-width: 100%;
+    margin: 0px auto;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+/* 
+.header-opttion ul li{
+
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*Body*/
+.bodyContents {
+    width: 100%;
+    height: 500px;
+}
+
+.body-oder {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    /* position: absolute; */
+}
+
+.body-oder img {
+    width: 100%;
+    height: 100%;
+    /* height: 400px; */
+    opacity: 0.5;
+    object-fit: cover;
+    object-position: 50% 100%;
+
+}
+.oder-content{
+    width: 100%;
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    color: #050505;
+}
+.oder-content-notice{
+    width: 50%;
+    font-size: 30px;
+    margin-bottom: 20px;
 }
