--- a/src/App.css
+++ b/src/App.css
@@ -156,25 +156,28 @@ table {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    box-sizing: border-box;
 }
 
 .header-menu_logo {
-    width: 100px;
+    width: 15%;
     height:100%
 }
 .header-menu_logoImg {
-    width: 100%;
+    width: 100px;
 }
 
 .header-menu_toolbar {
     width: 70%;
     height: 100%;
-    margin-left: 20px;
     display: flex;  
     align-items: center;
     text-align: center;  
 }
-
+.header-menu_tool{
+    width: 15%;
+    height:100%
+}
 
 .header-menu_toolbar ul {
     width: auto;
@@ -214,16 +217,6 @@ table {
 
 
 
-
-
-
-
-
-
-
-
-
-
 /*Body*/
 .bodyContents {
     width: 100%;
@@ -233,6 +226,7 @@ table {
 .body-oder {
     width: 100%;
     height: 100%;
+    margin-bottom: 10px;
     position: relative;
     /* position: absolute; */
 }
@@ -258,3 +252,41 @@ table {
     font-size: 30px;
     margin-bottom: 20px;
 }
+
+/*Commercial*/
+
+.commercialCarousel{
+    width: 100%;
+    display: flex !important;
+    flex-direction: row;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+.commercialCarousel img{
+    width: 50%;
+}
+/*Commercial*/
+
+/*Options*/
+.body-options-container{
+    width: 100%;
+}
+.options-row{
+    display: flex;
+    /* flex-wrap: wrap; */
+    width: 100%;
+    height: 300px;
+    box-sizing: border-box;
+    gap: 10px;
+}
+.options-row-item{
+    width: 25%;
+    height:100%;
+    border: 1px solid red;
+}
+.options-row-item video{
+    width: 100%;
+    height:100%;
+}
+
+/*Options*/
