--- a/src/App.css
+++ b/src/App.css
@@ -135,12 +135,14 @@ table {
     height: auto;
     margin: 5px auto;
 }
-.login-registerForm{
+
+.login-registerForm {
     width: 200px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 /*header/////////////////*/
 .header {
     width: 100%;
@@ -161,8 +163,9 @@ table {
 
 .header-menu_logo {
     width: 15%;
-    height:100%
+    height: 100%
 }
+
 .header-menu_logoImg {
     width: 100px;
 }
@@ -170,13 +173,14 @@ table {
 .header-menu_toolbar {
     width: 70%;
     height: 100%;
-    display: flex;  
+    display: flex;
     align-items: center;
-    text-align: center;  
+    text-align: center;
 }
-.header-menu_tool{
+
+.header-menu_tool {
     width: 15%;
-    height:100%
+    height: 100%
 }
 
 .header-menu_toolbar ul {
@@ -210,6 +214,7 @@ table {
     justify-content: center;
     gap: 20px;
 }
+
 /* 
 .header-opttion ul li{
 
@@ -240,14 +245,16 @@ table {
     object-position: 50% 100%;
 
 }
-.oder-content{
+
+.oder-content {
     width: 100%;
     position: absolute;
     top: 30%;
     left: 30%;
     color: #050505;
 }
-.oder-content-notice{
+
+.oder-content-notice {
     width: 50%;
     font-size: 30px;
     margin-bottom: 20px;
@@ -255,38 +262,40 @@ table {
 
 /*Commercial*/
 
-.commercialCarousel{
+.commercialCarousel {
     width: 100%;
     display: flex !important;
     flex-direction: row;
     gap: 10px;
     margin-bottom: 10px;
 }
-.commercialCarousel img{
+
+.commercialCarousel img {
     width: 50%;
 }
+
 /*Commercial*/
 
 /*Options*/
-.body-options-container{
+.body-options-container {
     width: 100%;
 }
-.options-row{
+
+.options-items {
     display: flex;
-    /* flex-wrap: wrap; */
+    justify-content: center;
+    flex-wrap: wrap;
     width: 100%;
-    height: 300px;
+    height: auto;
     box-sizing: border-box;
-    gap: 10px;
+    gap: 5px;
 }
-.options-row-item{
-    width: 25%;
-    height:100%;
-    border: 1px solid red;
-}
-.options-row-item video{
-    width: 100%;
-    height:100%;
+
+
+
+.options-items  video {
+    width: 32.5%;
+    height: auto;
 }
 
 /*Options*/
