--- a/src/App.css
+++ b/src/App.css
@@ -287,6 +287,7 @@ body {
 /*Options*/
 .body-options-container {
     width: 100%;
+    margin-bottom: 20px;
 }
 
 .options-items {
@@ -454,3 +455,17 @@ font-size: 14px;
 }
 
 /*Register*/
+
+.bodyServices{
+    width: 100%;
+    margin: 0px 5px;
+}
+.bodyServices-title{
+    width: 100%;
+}
+.bodyServices-logo{
+    width: 10%;
+}
+.bodyServices-logo img{
+    width: 100%;
+}
