--- a/src/App.css
+++ b/src/App.css
@@ -204,6 +204,21 @@ table {
     height: 100%;
     transform: translateX(-10px);
 }
+.formShowEmailLogin{
+    width: 200px;
+    margin: 50px 0px 0px -20px ;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.showEmailLogin{
+    font-size: 20px;
+    margin: 10px;
+}
+
+
+
+
 
 .header-opttion {
     width: 100%;
