--- a/src/App.css
+++ b/src/App.css
@@ -283,6 +283,14 @@ body {
     margin-bottom: 20px;
 }
 
+
+
+.bodyOder-search_Oders_dayTogo{
+    width: auto;
+    height: 20px;
+}
+
+
 /*Commercial*/
 
 .commercialCarousel {
