--- a/src/App.css
+++ b/src/App.css
@@ -204,14 +204,16 @@ table {
     height: 100%;
     transform: translateX(-10px);
 }
-.formShowEmailLogin{
+
+.formShowEmailLogin {
     width: 200px;
-    margin: 50px 0px 0px -20px ;
+    margin: 50px 0px 0px -20px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
-.showEmailLogin{
+
+.showEmailLogin {
     font-size: 20px;
     margin: 10px;
 }
@@ -272,7 +274,7 @@ body {
 .oder-content {
     width: 100%;
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 30%;
     color: #050505;
 }
@@ -283,12 +285,94 @@ body {
     margin-bottom: 20px;
 }
 
+.bodyOder-search-container {
+    width: 100%;
+    height: 500px;
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    top: 50px;
+    left: 0;
+    height: 50%;
 
-
-.bodyOder-search_Oders_dayTogo{
-    width: auto;
-    height: 20px;
 }
+
+.bodyOder-search {
+    width: 95%;
+    padding: 20px 0;
+    border-radius: 20px;
+    /* border: 5px solid rgb(38, 0, 255); */
+}
+
+.bodyOder-search_title {
+    width: 100%;
+    justify-content: center;
+    gap: 50px;
+    display: flex;
+    font-size: 22px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.bodyOder-search_container{
+    width: 100%;
+    display: flex; 
+}
+
+.bodyOder-search_Oders {
+    width: 100%;
+    height:auto;
+    display: flex; 
+    /* position: absolute; */
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    gap:30px;
+}
+
+.bodyOder-search_Oders_place {
+    width: 35%;
+    box-sizing: border-box;
+    height: 50px;
+    padding: 0 20px;
+}
+.bodyOder-search_Oders_place p{
+    text-align: center;
+}
+.bodyOder-search_Oders_place input{
+    width: 100%;
+    height: 35px;
+
+}
+.bodyOder-search_Oders_dayGo{
+    width: 35%;
+    text-align: center;
+    height: 50px;
+
+}
+.bodyOder-search_Oders_dayGo p{
+    margin-bottom: 5px;
+
+}
+
+
+.bodyOder-search_Oders_people{
+    width:auto;
+    text-align: center;
+    height: 50px;
+    margin-bottom: 10px;
+}
+.bodyOder-search_Oders_numPp{
+    margin-top: 10px;
+    text-align: center;
+    width: 80%;
+    height: 30px;
+}
+
+
+
+
+
+
 
 
 /*Commercial*/
@@ -404,7 +488,7 @@ body {
 
 .form {
     width: 100%;
-    height:100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -414,51 +498,60 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.formLoginContainer{
+
+.formLoginContainer {
     width: 60%;
-    height:60%;
+    height: 60%;
     box-sizing: border-box;
     padding: 10px;
     border-radius: 20px;
-    background-color: rgb(237,246,249);
+    background-color: rgb(237, 246, 249);
 }
-.loginTitile{
+
+.loginTitile {
     text-align: center;
 }
-.loginTitile h3{
+
+.loginTitile h3 {
     font-size: 22px;
     font-weight: bold;
     text-align: center;
     margin: 30px 0px;
 }
-.loginInput{
+
+.loginInput {
     width: 100%;
     display: inline-flex;
     align-items: center;
     margin: 10px;
 }
-.loginInput-titile{
-width: 20%;
-padding: 0px 20px 0 40px;
-font-size: 14px;
+
+.loginInput-titile {
+    width: 20%;
+    padding: 0px 20px 0 40px;
+    font-size: 14px;
 }
-.emailErr{
+
+.emailErr {
     width: 100%;
     font-size: 14px;
     display: flex;
     justify-content: center;
 }
-.loginInput input{
+
+.loginInput input {
     font-size: 14px;
     width: 60%;
     height: 30px;
 }
-.loginInput_checkbox{
+
+.loginInput_checkbox {
     display: flex;
     justify-content: center;
     margin: 10px 0px;
 }
-.formLoginSubmit{
+
+.formLoginSubmit {
     width: 100%;
     height: auto;
     padding-bottom: 25px;
@@ -466,29 +559,34 @@ font-size: 14px;
     justify-content: center;
     align-items: center;
 }
-.formNotice{
+
+.formNotice {
     color: rgb(248, 47, 47);
     width: 100%;
     padding: 10px;
     display: flex;
     justify-content: center;
 }
-.formBackToHome{
-    margin:0 50px;
+
+.formBackToHome {
+    margin: 0 50px;
 }
 
 /*Register*/
 
-.bodyServices{
+.bodyServices {
     width: 100%;
     margin: 0px 5px;
 }
-.bodyServices-title{
+
+.bodyServices-title {
     width: 100%;
 }
-.bodyServices-logo{
+
+.bodyServices-logo {
     width: 10%;
 }
-.bodyServices-logo img{
+
+.bodyServices-logo img {
     width: 100%;
 }
