--- a/src/App.css
+++ b/src/App.css
@@ -313,20 +313,21 @@ body {
     font-weight: bold;
     margin: 10px 0;
 }
-.bodyOder-search_container{
+
+.bodyOder-search_container {
     width: 100%;
-    display: flex; 
+    display: flex;
 }
 
 .bodyOder-search_Oders {
     width: 100%;
-    height:auto;
-    display: flex; 
+    height: auto;
+    display: flex;
     /* position: absolute; */
     justify-content: center;
     align-items: center;
     font-size: 20px;
-    gap:30px;
+    gap: 30px;
 }
 
 .bodyOder-search_Oders_place {
@@ -335,40 +336,45 @@ body {
     height: 50px;
     padding: 0 20px;
 }
-.bodyOder-search_Oders_place p{
+
+.bodyOder-search_Oders_place p {
     text-align: center;
 }
-.bodyOder-search_Oders_place input{
+
+.bodyOder-search_Oders_place input {
     width: 100%;
     height: 35px;
 
 }
-.bodyOder-search_Oders_dayGo{
+
+.bodyOder-search_Oders_dayGo {
     width: 35%;
     text-align: center;
     height: 50px;
 
 }
-.bodyOder-search_Oders_dayGo p{
+
+.bodyOder-search_Oders_dayGo p {
     margin-bottom: 5px;
 
 }
 
 
-.bodyOder-search_Oders_people{
-    width:auto;
+.bodyOder-search_Oders_people {
+    width: auto;
     text-align: center;
     height: 50px;
     margin-bottom: 10px;
 }
-.bodyOder-search_Oders_numPp{
+
+.bodyOder-search_Oders_numPp {
     margin-top: 10px;
     text-align: center;
     width: 80%;
     height: 30px;
 }
 
-.bodyOder-search_btn{
+.bodyOder-search_btn {
     width: 10%;
     padding-top: 30px;
 }
@@ -593,3 +599,200 @@ body {
 .bodyServices-logo img {
     width: 100%;
 }
+
+/*Register*/
+
+/*Product*/
+.product {
+    width: 100%;
+}
+
+.product-comercial {
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.product-comercial img {
+    width: 100%;
+}
+
+.product-contents {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    /* border: 1px solid rebeccapurple; */
+    box-sizing: border-box;
+}
+
+.product-contents_show {
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.product-contents_head {
+    width: 100%;
+    font-size: 35px;
+    /* border: 1px solid rebeccapurple; */
+    box-sizing: border-box;
+}
+
+.product-contents_head_title {
+    margin: 20px 0px;
+
+}
+
+.product-contents_Price {
+    width: 100%;
+    padding-left: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.product-contents_Price-current {
+    width: 50%;
+    padding: 0px 20px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 25px;
+}
+.product-contents_Price-current span{
+    padding-left: 5px;
+    font-size: 16px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+
+
+
+
+.product-contents_bgd {
+    width: 100%;
+    /* display: flex; */
+    position: absolute;
+    top: -0;
+    left: 0;
+}
+
+.product-contents_bgd img {
+    width: 100%;
+    opacity: 0.1;
+}
+
+.product-contents_slides {
+    width: 100%;
+    /* border: 5px solid rebeccapurple; */
+    box-sizing: border-box;
+    display: flex;
+    gap: 5px;
+    margin-bottom: 40px;
+}
+
+.product-contents_slide {
+    width: 50%;
+    height: 100%;
+}
+
+.product-contents_slideImg {
+    width: 100%;
+}
+
+.product-contents_slideImg img {
+    width: 100%;
+    height: 300px;
+}
+
+.product-contents_comment {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+
+.comment {
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-indent: 2em;
+}
+
+.product-contents_commentNo1 {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+
+
+.product-contents_comment img {
+    width: 80%;
+    margin-bottom: 10px;
+}
+
+/*Product*/
+
+
+/*Footer*/
+.Footer{
+    width: 100%;
+    padding-bottom: 10px;
+    background-color: rgb(247,250,252);
+}
+.Footer-logo{
+    width: 100%;
+}
+.Footer-logo img{
+    width: 20%;
+    margin: 20px 30px;
+}
+.Footer-contents{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+.Footer-content{
+    width: 30%;
+    padding: 20px 10px;
+}
+.Footer-content-Title{
+    width: 100%;
+}
+.Footer-content-Title p{
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.Footer-content-policy{
+    width: 100%;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+.Footer-content-policy p{
+    margin-bottom: 5px;
+}
+.Footer-Img{
+    width: 100%;
+    display: flex;
+}
+.Footer-Img img{
+    width: 50%;
+
+}
+
+
+/*Footer*/
