--- a/src/App.css
+++ b/src/App.css
@@ -829,16 +829,23 @@ body {
 /*Footer*/
 
 /*UserControl*/
+.controls{
+    width: 100%;
+}
+.btn-toggle{
+    padding: 30px 20px 0px;
+}
 .userControl-container {
     margin: 20px 0px;
     width: 100%;
     height: 100vh;
     position: relative;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 .userControl-container-tb{
-    width: 80%;
+    width: 90%;
     
 }
 
@@ -850,48 +857,39 @@ body {
 }
 
 .userControl-tb caption {
-    padding: 10px 0px;
     font-size: 25px;
+    margin-bottom: 10px;
 }
 
 
 .userControl-bgd1 {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .userControl-bgd1 img {
     width: 100%;
-    height: 100%;
+    height: auto;
     position: absolute;
     left: 0;
     top: 0;
     opacity: 0.2;
 }
 
-.userControl-bgd2 {
-    width: 100%;
-    height: 100%;
-}
 
-.userControl-bgd2 img {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 1000px;
-    opacity: 0.2;
-}
 
 .userControl-tb-title {
     align-items: center;
-    border: 1px solid ;
     background-color: #FFF5F7;
     margin-bottom: 20px;
 }
-.userControl-tb-title {
-    border: 1px solid rebeccapurple;
+.userControl-tb-title th {
+    padding: 20px 0px;
+    border: 1px solid ;
 }
-
+.userControl-tb-body td{
+    padding: 5px 0px;
+    border: 1px solid ;
+}
 
 /*UserControl*/
