--- a/src/App.css
+++ b/src/App.css
@@ -553,12 +553,14 @@ body {
     width: 100%;
     display: inline-flex;
     align-items: center;
-    margin: 10px;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .loginInput-titile {
     width: 20%;
-    padding: 0px 20px 0 40px;
+    padding-left: 20px;
     font-size: 14px;
 }
 
@@ -573,6 +575,7 @@ body {
     font-size: 14px;
     width: 60%;
     height: 30px;
+    margin-right: 20px;
 }
 
 .loginInput_checkbox {
@@ -829,12 +832,14 @@ body {
 /*Footer*/
 
 /*UserControl*/
-.controls{
+.controls {
     width: 100%;
 }
-.btn-toggle{
+
+.btn-toggle {
     padding: 30px 20px 0px;
 }
+
 .userControl-container {
     margin: 20px 0px;
     width: 100%;
@@ -844,9 +849,10 @@ body {
     flex-wrap: wrap;
     justify-content: center;
 }
-.userControl-container-tb{
+
+.userControl-container-tb {
     width: 90%;
-    
+
 }
 
 .userControl-tb {
@@ -874,6 +880,7 @@ body {
     left: 0;
     top: 0;
     opacity: 0.2;
+    z-index: -1;
 }
 
 
@@ -883,13 +890,102 @@ body {
     background-color: #FFF5F7;
     margin-bottom: 20px;
 }
+
 .userControl-tb-title th {
     padding: 20px 0px;
-    border: 1px solid ;
+    border: 1px solid;
 }
-.userControl-tb-body td{
+
+.userControl-tb-body td {
     padding: 5px 0px;
-    border: 1px solid ;
+    border: 1px solid;
 }
 
 /*UserControl*/
+
+/*EditUser*/
+.containerEdit {
+    width: 100%;
+    background: rgba(235, 230, 230, 0.6);
+
+}
+
+.editForm {
+    margin-top: 30px;
+    width: 100%;
+    padding: 20px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-size: cover;
+    box-sizing: border-box;
+  
+}
+
+.editFormContents {
+
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-sizing: border-box;
+
+}
+
+.contentChild {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.editFormContents_title {
+    text-align: center;
+    padding: 10px 0px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.editFormContent {
+    width: 80%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.editFormContent_title {
+    width: 30%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.editFormContent_input {
+    width: 70%;
+    height: 30px;
+}
+
+.editFormContentBtn {
+    margin: 20px 0px;
+}
+
+.editFormContentNotify {
+    margin: 5px 0px;
+    font-size: 16px;
+    color: red;
+
+
+}
+
+.editFormImgbgd {
+    width: 100%;
+    z-index: 0;
+}
+
+/*EditUser*/
